# ChangeLog for dev-perl/Email-MIME
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.73 2015/01/08 21:52:56 zlogene Exp $

  08 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> Email-MIME-1.926.0.ebuild:
  Mark stable

  19 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> -Email-MIME-1.911.0.ebuild,
  Email-MIME-1.924.0.ebuild:
  amd64/ppc64/ppc/x86 stable wrt bug #502738

*Email-MIME-1.926.0 (16 Mar 2014)

  16 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> +Email-MIME-1.926.0.ebuild:
  Version bump

  16 Mar 2014; Mikle Kolyada <zlogene@gentoo.org> Email-MIME-1.924.0.ebuild:
  Bump to EAPI=5

*Email-MIME-1.924.0 (15 Aug 2013)

  15 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Email-MIME-1.924.0.ebuild:
  Bump

  06 Jan 2013; Torsten Veller <tove@gentoo.org> -Email-MIME-1.910.0.ebuild:
  Cleanup

  22 Nov 2012; Agostino Sarubbo <ago@gentoo.org> Email-MIME-1.911.0.ebuild:
  Stable for x86, tested by Vincent Olivert Riera <peratu@carrosses.com>, wrt
  bug #438294

  16 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  Email-MIME-1.911.0.ebuild:
  stable ppc64, bug #438294

  15 Oct 2012; Anthony G. Basile <blueness@gentoo.org>
  Email-MIME-1.911.0.ebuild:
  stable ppc, bug #438294

  15 Oct 2012; Agostino Sarubbo <ago@gentoo.org> Email-MIME-1.911.0.ebuild:
  Stable for amd64, wrt bug #438294

*Email-MIME-1.911.0 (27 Jul 2012)

  27 Jul 2012; Torsten Veller <tove@gentoo.org> +Email-MIME-1.911.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> Email-MIME-1.910.0.ebuild,
  metadata.xml:
  Drop alpha because it was dropped from dependencies already. Update metadata

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -Email-MIME-1.906.ebuild,
  -Email-MIME-1.907.0.ebuild, -Email-MIME-1.908.0.ebuild:
  Cleanup

  24 Mar 2012; Raúl Porcel <armin76@gentoo.org> Email-MIME-1.906.ebuild,
  Email-MIME-1.907.0.ebuild, Email-MIME-1.908.0.ebuild,
  Email-MIME-1.910.0.ebuild: