@@ -1,0 +1,40 @@
+# Copyright 1999-2015 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/Email-MIME-1.929.0.ebuild,v 1.1 2015/05/10 18:12:10 dilfridge Exp $
+
+EAPI=5
+
+MODULE_AUTHOR=RJBS
+MODULE_VERSION=1.929
+inherit perl-module
+
+DESCRIPTION="Easy MIME message parsing"
+
+SLOT="0"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86 ~sparc-solaris ~x86-solaris"
+IUSE="test"
+
+RDEPEND="
+	virtual/perl-Carp
+	dev-perl/Email-Address
+	>=dev-perl/Email-MIME-ContentType-1.16.0
+	>=dev-perl/Email-MIME-Encodings-1.314.0
+	dev-perl/Email-MessageID
+	>=dev-perl/Email-Simple-2.102.0
+	>=virtual/perl-Encode-1.980.100
+	virtual/perl-MIME-Base64
+	>=dev-perl/MIME-Types-1.180.0
+	virtual/perl-Scalar-List-Utils
+	virtual/perl-parent
+"
+DEPEND="${RDEPEND}
+	virtual/perl-ExtUtils-MakeMaker
+	test? (
+		virtual/perl-File-Spec
+		>=virtual/perl-Test-Simple-0.960.0
+		dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage
+	)
+"
+
+SRC_TEST="do parallel"
