@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Email-MIME
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.73 2015/01/08 21:52:56 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.74 2015/05/10 18:12:10 dilfridge Exp $
+
+*Email-MIME-1.929.0 (10 May 2015)
+
+  10 May 2015; Andreas K. Huettel <dilfridge@gentoo.org>
+  -Email-MIME-1.924.0.ebuild, +Email-MIME-1.929.0.ebuild:
+  Version bump
 
   08 Jan 2015; Mikle Kolyada <zlogene@gentoo.org> Email-MIME-1.926.0.ebuild:
   Mark stable
